--- a/public/app/views/users/login.html
+++ b/public/app/views/users/login.html
@@ -1,17 +1,19 @@
-<div class="page-header">
+<script src="users_controller.js"></script>
+
+<div class="page-header" ng-controller="UsersController">
   <h1>Kirjaudu sisään</h1>
 </div>
 
 <form>
   <div class="form-group">
     <label>Käyttäjätunnus</label>
-    <input type="text" class="form-control">
+    <input type="text" class="form-control" ng-model="user.username">
   </div>
 
   <div class="form-group">
     <label>Salasana</label>
-    <input type="text" class="form-control">
+    <input type="password" class="form-control" ng-model="user.password">
   </div>
 
-  <button class="btn btn-primary">Kirjaudu sisään</button>
+  <button class="btn btn-primary" ng-click="login(user)">Kirjaudu sisään</button>
 </form>
